资源包/LabVIEW有用程序/例程DMC3000系列/VC.NET/例2_回原点运动/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
//函数库打印输出功能 mode：0-不输出，1-输出
DMC_API short __stdcall dmc_set_debug_mode(WORD mode,const char *FileName);
DMC_API short __stdcall dmc_get_debug_mode(WORD* mode,char *FileName);
//通用IO		
DMC_API short __stdcall dmc_read_inbit(WORD CardNo,WORD bitno); 	//读取输入口的状态
DMC_API short __stdcall dmc_write_outbit(WORD CardNo,WORD bitno,WORD on_off); 	//设置输出口的状态
DMC_API short __stdcall dmc_read_outbit(WORD CardNo,WORD bitno);  	//读取输出口的状态
DMC_API DWORD __stdcall dmc_read_inport(WORD CardNo,WORD portno); 	//读取输入端口的值
DMC_API DWORD __stdcall dmc_read_outport(WORD CardNo,WORD portno=0); 	//读取输出端口的值
DMC_API short __stdcall dmc_write_outport(WORD CardNo,WORD portno,DWORD outport_val);  	//设置输出端口的值
//IO输出延时翻转
DMC_API short __stdcall dmc_IO_TurnOutDelay(WORD CardNo,WORD bitno,DWORD DelayTime);
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
DMC_API short __stdcall dmc_reverse_outbit(WORD CardNo,WORD bitno,double reverse_time);
//3800专用 IO计数功能
DMC_API short __stdcall dmc_SetIoCountMode(WORD CardNo,WORD bitno,WORD mode,DWORD filter);
DMC_API short __stdcall dmc_GetIoCountMode(WORD CardNo,WORD bitno,WORD *mode,DWORD* filter);
DMC_API short __stdcall dmc_SetIoCountValue(WORD CardNo,WORD bitno,DWORD CountValue);
DMC_API short __stdcall dmc_GetIoCountValue(WORD CardNo,WORD bitno,DWORD* CountValue);
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
DMC_API short __stdcall dmc_set_io_count_mode(WORD CardNo,WORD bitno,WORD mode,double filter_time);//设置IO计数模式
DMC_API short __stdcall dmc_get_io_count_mode(WORD CardNo,WORD bitno,WORD *mode,double* filter_time);
DMC_API short __stdcall dmc_set_io_count_value(WORD CardNo,WORD bitno,DWORD CountValue);//设置IO计数值
DMC_API short __stdcall dmc_get_io_count_value(WORD CardNo,WORD bitno,DWORD* CountValue);//读取IO计数值
//伺服专用IO		
DMC_API short __stdcall dmc_set_alm_mode(WORD CardNo,WORD axis,WORD enable,WORD alm_logic,WORD alm_action);	//设置ALM信号
DMC_API short __stdcall dmc_get_alm_mode(WORD CardNo,WORD axis,WORD *enable,WORD *alm_logic,WORD *alm_action);	//读取设置ALM信号
DMC_API short __stdcall dmc_set_inp_mode(WORD CardNo,WORD axis,WORD enable,WORD inp_logic);	//设置INP信号
DMC_API short __stdcall dmc_get_inp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *inp_logic);	//读取设置INP信号
DMC_API short __stdcall dmc_read_rdy_pin(WORD CardNo,WORD axis); 	//读取RDY状态
DMC_API short __stdcall dmc_write_erc_pin(WORD CardNo,WORD axis,WORD on_off); 	//控制ERC信号输出
DMC_API short __stdcall dmc_read_erc_pin(WORD CardNo,WORD axis);
 
DMC_API short __stdcall dmc_write_sevon_pin(WORD CardNo,WORD axis,WORD on_off); 	//输出SEVON信号
DMC_API short __stdcall dmc_read_sevon_pin(WORD CardNo,WORD axis); 	//读取SEVON信号
 	

//运动状态检测		
DMC_API double __stdcall dmc_read_current_speed(WORD CardNo,WORD axis);	//读取指定轴的当前速度
DMC_API double __stdcall dmc_read_vector_speed(WORD CardNo);	//读取当前卡的插补速度
DMC_API long __stdcall dmc_get_position(WORD CardNo,WORD axis);	//读取指定轴的当前位置
DMC_API short __stdcall dmc_set_position(WORD CardNo,WORD axis,long current_position);	//设定指定轴的当前位置
DMC_API long __stdcall dmc_get_target_position(WORD CardNo,WORD axis);        //读取指定轴的目标位置
DMC_API short __stdcall dmc_check_done(WORD CardNo,WORD axis);	//读取指定轴的运动状态
DMC_API DWORD __stdcall dmc_axis_io_status(WORD CardNo,WORD axis);	//读取指定轴有关运动信号的状态
DMC_API short __stdcall dmc_stop(WORD CardNo,WORD axis,WORD stop_mode);	//单轴减速停止/立即停止
DMC_API short __stdcall dmc_check_done_multicoor(WORD CardNo,WORD Crd); //调用插补运动，请使用该函数检测运动状态
DMC_API short __stdcall dmc_stop_multicoor(WORD CardNo,WORD Crd,WORD stop_mode);//调用插补运动，请使用该函数停止运动状态
DMC_API short __stdcall dmc_emg_stop(WORD CardNo);	//紧急停止所有轴
//检测轴到位状态
DMC_API short __stdcall  dmc_set_factor_error(WORD CardNo,WORD axis,double factor,long error);//设置编码器系数、误差带
DMC_API short __stdcall  dmc_get_factor_error(WORD CardNo,WORD axis,double* factor,long* error);//读取编码器系数、误差带
DMC_API short __stdcall  dmc_check_success_pulse(WORD CardNo,WORD axis);//检测指令位置到位情况
DMC_API short __stdcall  dmc_check_success_encoder(WORD CardNo,WORD axis);//检测编码器反馈位置到位情况
//3800专用 主卡与接线盒通讯状态
DMC_API short __stdcall dmc_LinkState(WORD CardNo,WORD* State);	//连接状态
//密码管理
DMC_API short __stdcall dmc_check_sn(WORD CardNo, const char * check_sn);//验证密码，校验3次失败之后再次校验将返回校验失败
DMC_API short __stdcall dmc_write_sn(WORD CardNo, const char * new_sn);//改写密码
//DMC5410 DMC5800专用
DMC_API short __stdcall dmc_get_axis_run_mode(WORD CardNo, WORD axis,WORD* run_mode);//轴运动模式
DMC_API short __stdcall dmc_get_equiv(WORD CardNo,WORD axis, double *equiv);//脉冲当量
DMC_API short __stdcall dmc_set_equiv(WORD CardNo,WORD axis, double equiv);
DMC_API short __stdcall dmc_set_backlash_unit(WORD CardNo,WORD axis,double backlash);//反向间隙
DMC_API short __stdcall dmc_get_backlash_unit(WORD CardNo,WORD axis,double *backlash);
DMC_API short __stdcall dmc_set_position_unit(WORD CardNo,WORD axis, double pos);//当前指令位置
DMC_API short __stdcall dmc_get_position_unit(WORD CardNo,WORD axis, double * pos);
DMC_API short __stdcall dmc_set_encoder_unit(WORD CardNo,WORD axis, double pos);//当前反馈位置
DMC_API short __stdcall dmc_get_encoder_unit(WORD CardNo,WORD axis, double * pos);
DMC_API short __stdcall dmc_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//定长
DMC_API short __stdcall dmc_t_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//对称T型定长
DMC_API short __stdcall dmc_ex_t_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//非对称T型定长
DMC_API short __stdcall dmc_s_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//对称S型定长
DMC_API short __stdcall dmc_ex_s_pmove_unit(WORD CardNo,WORD axis,double Dist,WORD posi_mode);//非对称S型定长
DMC_API short __stdcall dmc_line_unit(WORD CardNo,WORD Crd,WORD AxisNum,WORD* AxisList,double* Target_Pos,WORD posi_mode);//单段直线
DMC_API short __stdcall dmc_set_can_state(WORD CardNo,WORD NodeNum,WORD state);//0-断开；1-连接；2-复位后自动连接
DMC_API short __stdcall dmc_get_can_state(WORD CardNo,WORD* NodeNum,WORD* state);////0-断开；1-连接；2-异常
DMC_API short __stdcall dmc_get_can_errcode(WORD CardNo,WORD *Errcode);//读取CanIo通讯错误码
DMC_API short __stdcall dmc_write_can_outbit(WORD CardNo,WORD Node,WORD bitno,WORD on_off);
DMC_API short __stdcall dmc_read_can_outbit(WORD CardNo,WORD Node,WORD bitno);
DMC_API short __stdcall dmc_read_can_inbit(WORD CardNo,WORD Node,WORD bitno);
DMC_API short __stdcall dmc_write_can_outport(WORD CardNo,WORD Node,WORD portno,DWORD outport_val);//写CanIo输出口
DMC_API DWORD __stdcall dmc_read_can_outport(WORD CardNo,WORD Node,WORD portno);//读取CanIo输出端口
DMC_API DWORD __stdcall dmc_read_can_inport(WORD CardNo,WORD Node,WORD portno);//读取CanIo输入端口