资源包/LabVIEW有用程序/例程DMC3000系列/VB6.0/例11_两轴高级轨迹规划PVT_VB/LTDMC.bas

        
        '通用IO
        Declare Function dmc_read_inbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer) As Integer            '读取输入口的状态
        Declare Function dmc_write_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal on_off As Integer) As Integer         '设置输出口的状态
        Declare Function dmc_read_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer) As Integer           '读取输出口的状态
        Declare Function dmc_read_inport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNo As Integer) As Long     '读取输入端口的值
        Declare Function dmc_read_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNo As Integer) As Long            '读取输出端口的值
        Declare Function dmc_write_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal PortNo As Integer, ByVal outport_val As Long) As Integer       '设置输出端口的值
        '3800,3600,5800,5600专用 IO辅助功能函数
        Declare Function dmc_IO_TurnOutDelay Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal DelayTime As Long) As Integer
        Declare Function dmc_SetIoCountMode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal mode As Integer, ByVal Filter As Long) As Integer
        Declare Function dmc_GetIoCountMode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef mode As Integer, ByRef Filter As Long) As Integer
        Declare Function dmc_SetIoCountValue Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal CountValue As Long) As Integer
        Declare Function dmc_GetIoCountValue Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef CountValue As Long) As Integer
        '以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
        Declare Function dmc_reverse_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal reverse_time As Double) As Integer
        Declare Function dmc_set_io_count_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal mode As Integer, ByVal Filter As Double) As Integer
        Declare Function dmc_get_io_count_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef mode As Integer, ByRef Filter As Double) As Integer
        Declare Function dmc_set_io_count_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByVal CountValue As Long) As Integer
        Declare Function dmc_get_io_count_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal bitno As Integer, ByRef CountValue As Long) As Integer
        
        '伺服专用IO
        Declare Function dmc_set_inp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal inp_logic As Integer) As Integer      '设置INP信号
        Declare Function dmc_get_inp_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef inp_logic As Integer) As Integer  '读取设置INP信号
        Declare Function dmc_set_erc_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal erc_logic As Integer, ByVal erc_width As Integer, ByVal erc_off_time As Integer) As Integer   '设置ERC信号
        Declare Function dmc_get_erc_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef erc_logic As Integer, ByRef erc_width As Integer, ByRef erc_off_time As Integer) As Integer   '读取设置ERC信号
        Declare Function dmc_set_alm_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal alm_logic As Integer, ByVal alm_action As Integer) As Integer '设置ALM信号
        Declare Function dmc_get_alm_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef alm_logic As Integer, ByRef alm_action As Integer) As Integer     '读取设置ALM信号
        Declare Function dmc_write_sevon_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal on_off As Integer) As Integer       '输出SEVON信号
        Declare Function dmc_read_sevon_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer         '读取SEVON信号
        Declare Function dmc_read_rdy_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer           '读取RDY状态
        Declare Function dmc_write_erc_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal sel As Integer) As Integer    '控制ERC信号输出
        Declare Function dmc_read_erc_pin Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer    '读取ERC信号输出端口
    
        '运动状态
        Declare Function dmc_read_current_speed Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Double      '读取指定轴的当前速度
        Declare Function dmc_read_vector_speed Lib "LTDMC.dll" (ByVal CardNo As Integer) As Double    '读取当前卡的插补速度
        Declare Function dmc_get_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long      '读取指定轴的当前位置
        Declare Function dmc_set_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal current_position As Long) As Integer   '设定指定轴的当前位置
        Declare Function dmc_check_done Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer     '读取指定轴的运动状态
        Declare Function dmc_check_done_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer) As Integer
        Declare Function dmc_axis_io_status Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long    '读取指定轴有关运动信号的状态
        Declare Function dmc_stop Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal stop_mode As Integer) As Integer       '单轴停止
        Declare Function dmc_stop_multicoor Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal stop_mode As Integer) As Integer
        Declare Function dmc_emg_stop Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer      '紧急停止所有轴
        Declare Function dmc_get_target_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long      '读取目标位置
        '检测轴到位状态
        Declare Function dmc_set_factor_error Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal factor As Double, ByVal error As Long) As Integer
        Declare Function dmc_get_factor_error Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef factor As Double, ByRef error As Long) As Integer
        Declare Function dmc_check_success_pulse Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer
        Declare Function dmc_check_success_encoder Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer

        '3800,3600,5800,5600专用 主卡与接线盒通讯状态
        Declare Function dmc_LinkState Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef state As Integer) As Integer      '连接状态
        
        
        '3800,3600,5800,5600专用 CAN-IO扩展
        Declare Function dmc_set_can_state Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal NodeNum As Integer, ByVal state As Integer) As Integer
        Declare Function dmc_get_can_state Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef NodeNum As Integer, ByRef state As Integer) As Integer
        Declare Function dmc_write_can_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal bitno As Integer, ByVal on_off As Integer) As Integer
        Declare Function dmc_read_can_outbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal bitno As Integer) As Integer
        Declare Function dmc_read_can_inbit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal bitno As Integer) As Integer
        Declare Function dmc_write_can_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal PortNo As Integer, ByVal outport_val As Long) As Integer
        Declare Function dmc_read_can_outport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal PortNo As Integer) As Long
        Declare Function dmc_read_can_inport Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Node As Integer, ByVal PortNo As Integer) As Long
        Declare Function dmc_get_can_errcode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef Errcode As Integer) As Integer
        
        '密码管理
        Declare Function dmc_write_sn Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal new_sn As String) As Integer
        Declare Function dmc_check_sn Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal check_sn As String) As Integer
        
        '函数库打印输出
        Declare Function dmc_set_debug_mode Lib "LTDMC.dll" (ByVal mode As Integer, ByVal FileName As String) As Integer
        Declare Function dmc_get_debug_mode Lib "LTDMC.dll" (ByRef mode As Integer, ByRef FileName As String) As Integer
        
        
        'DMC5000系列专用，基于脉冲当量的高级运动功能，连续插补运动功能
        Declare Function dmc_get_axis_run_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef run_mode As Integer) As Integer       '轴运动模式
        Declare Function dmc_set_trace Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer) As Integer      'trace功能
        Declare Function dmc_get_trace Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer) As Integer
        Declare Function dmc_read_trace_data Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal data_option As Integer, ByRef ReceiveSize As Long, ByRef time As Double, ByRef data As Double, ByRef remain_num As Long) As Integer
        Declare Function dmc_get_equiv Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef equiv As Double) As Integer       '脉冲当量
        Declare Function dmc_set_equiv Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal equiv As Double) As Integer
        Declare Function dmc_set_backlash_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal backlash As Double) As Integer  '反向间隙
        Declare Function dmc_get_backlash_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef backlash As Double) As Integer
        
        Declare Function dmc_set_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal pos As Double) As Integer    '当前指令位置
        Declare Function dmc_get_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pos As Double) As Integer
        Declare Function dmc_set_encoder_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal pos As Double) As Integer   '当前反馈位置
        Declare Function dmc_get_encoder_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pos As Double) As Integer
        
        Declare Function dmc_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer  '定长
        Declare Function dmc_t_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer  '对称T型定长
        Declare Function dmc_ex_t_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer '非对称T型定长
        Declare Function dmc_s_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer    '对称S型定长
        Declare Function dmc_ex_s_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer  '非对称S型定长

        Declare Function dmc_line_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal Crd As Integer, ByVal AxisNum As Integer, ByRef AxisList As Integer, ByRef target_Pos As Double, ByVal posi_mode As Integer) As Integer   '单段直线
